# finalproject_Kolosov_M25-555

./: .gitignore  README.md  main.py  pyproject.toml
