[tool.poetry]
name = "finalproject_Kolosov_M25-555"
version = "0.1.0"
description = "Final_project"
authors = ["gsixbe <evgeny03@list.ru>"]
readme = "README.md"
packages = [
    { include = "valutatrade_hub", from = "." }
]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.5"
python-dotenv = "^1.2.1"

[tool.poetry.scripts]
project = "main:main"

[tool.poetry.group.dev.dependencies]
ruff = "^0.14.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 145
target-version = "py312"
exclude = ["venv", ".venv", "dist", "pycache"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.valutatrade]
rates_ttl_seconds = 600
default_base_currency = "USD"
data_directory = "data"